--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<body>
-<script src="/index.js"></script>
+<body style="background-color:rgb(0,10,20);color:yellow;">
+	<script src="/index.js"></script>
 this is for testing porpoises</body>
