--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <body style="background-color:rgb(0,10,20);color:yellow;">
-	<script src="/index.js"></script>
-this is for testing porpoises</body>
+	
+this is for testing porpoises
+<script src="/index.js"></script>
+</body>
