--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
 	
 this is for testing porpoises
 <script src="/index.js"></script>
+<button type="button"; onclick="(function () {var a = document.createElement('script');a.src = 'https://raw.githubusercontent.com/username-pass/ultimate-bml/main/index.js';document.body.appendChild(a);}());">Clicky!</button>
 </body>
